# emscripten-component-demo

./: README.md
Demo-03-Svelte/: .gitignore  README.md  emscripten.settings.js  package-lock.json  package.json  rollup.config.js
Demo-03-Svelte/cpp/src/: CMakeLists.txt
Demo-03-Svelte/cpp/src/src/: events.cpp  events.h  hello_triangle.cpp
Demo-03-Svelte/cpp/wasm-module/: wasm-test.js
Demo-03-Svelte/cpp/wasm-worker/: wasm-test.js  wasm-test.wasm  wasm-test.worker.js
Demo-03-Svelte/src/: App.svelte
